--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".contacts"></activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
