--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Jan 24 16:41:44 IST 2018
-systemProp.http.proxyPassword=IIITA@8574
-systemProp.http.proxyHost=172.31.1.3
+#Fri Jan 26 20:05:23 IST 2018
+systemProp.http.proxyHost=
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyUser=rit2015025
 systemProp.http.proxyPort=8080
