--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Jan 26 20:05:23 IST 2018
-systemProp.http.proxyHost=
+#Fri Jan 26 21:37:15 IST 2018
+systemProp.http.proxyHost=172.31.1.5
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=8080
